fix navigation on mobile

--- a/src/style/components/_navigation.scss
+++ b/src/style/components/_navigation.scss
@@ -24,7 +24,7 @@
 
   &__listItem {
     font-size  : 1.25em;
-    margin: 0 .5em;
+    margin: 0 .125em;
 
     @media (min-width: 32em) {
       font-size  : 1.375em;
